Update styles to prevent the calculator layout spread when is  overflowed of numbers

--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ button {
 .calculator {
     border: 4px solid #252525;
     border-radius: 5px;
-    min-width: 310px;
-    max-width: 400px;
+    width: 310px;
     min-height: 450px;
     background-color: #282929;
     display: flex;
